<resources>
    <string name="app_name" translatable="false">au545208 Stocks</string>
    <string name="myStock">My Stocks:</string>
    <string name="stockName">Stock Name</string>
    <string name="purchase">Purchased at:\u0020</string>
    <string name="btnOverview1">Details</string>
    <string name="name">Name:</string>
    <string name="price">Purchased Price:</string>
    <string name="numStocks">#Stocks:</string>
    <string name="sector">Sector:</string>
    <string name="btnBack">Back</string>
    <string name="btnDelete">Delete</string>
    <string name="btnEdit">Edit</string>
    <string name="radio_tech">Technology</string>
    <string name="radio_health">Healthcare</string>
    <string name="radio_basicmats">Basic Materials</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSave">Save</string>
    <string name="DetailsActionbar">Stock Details</string>
    <string name="EditActionbar">Edit your stocks</string>
    <string name="btnAddStock" translatable="false">+</string>
    <string name="addStockSymbol">Stock Symbol</string>
    <string name="addPurchasePrice">Purchase Price</string>
    <string name="addNumOfStocks">Number of Stocks</string>
    <string name="addTitle">Add a Stock from the API</string>
    <string name="addPositive" translatable="false">OK</string>
    <string name="refresh">Refresh</string>
    <string name="alt_app_name">StockMonitor</string>
    <string name="adding">"Adding "</string>
    <string name="tothedb">" to the Database"</string>
    <string name="nosymbolfound">"Could not add stock with symbol: "</string>
    <string name="labelSymbol">Symbol:</string>
    <string name="labelPrimaryExchange">Primary Exchange:</string>
    <string name="labelLatestValue">Latest Value:</string>
    <string name="labelLatestTimestamp">Latest Update:</string>


</resources>
